--- a/src/app/plan/leer-plan/leer-plan.component.html
+++ b/src/app/plan/leer-plan/leer-plan.component.html
@@ -55,7 +55,13 @@
                                                     *ngFor="let rutina of dia.rutinas; let j=index">
                                                     <td>{{j+1}}</td>
                                                     <td>
-                                                        {{rutina.ejercicio.descripcion}}
+                                                        <ng-container *ngIf="rutina.ejercicio.nombrePersonalizado==''">
+                                                            {{rutina.ejercicio.nombre}}
+                                                        </ng-container>
+                                                        <ng-container *ngIf="rutina.ejercicio.nombrePersonalizado!=''">
+                                                            {{rutina.ejercicio.nombrePersonalizado}}
+                                                        </ng-container>
+                                                        
                                                     </td>
                                                     <td>
                                                         {{rutina.repeticiones}}
@@ -98,8 +104,13 @@
     <div class="modal-body">
         <div class="form-group row">
             <div align="center" class="col-sm">
-                <label
-                    class="font-weight-bold">{{usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.descripcion}}</label>
+                <ng-container *ngIf="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.nombrePersonalizado==''">
+                    <label class="font-weight-bold">{{usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.nombre}}</label>
+                </ng-container>
+                <ng-container *ngIf="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.nombrePersonalizado!=''">
+                    <label class="font-weight-bold">{{usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.nombrePersonalizado}}</label>
+                </ng-container>
+                
                 <ng-container *ngIf="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen!=null">
                     <img class="card-img-top"
                         src="{{prefijoUrlEjercicios+usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen}}"
