modificacion en environments

--- a/src/app/cliente/crear-cliente/crear-cliente.component.html
+++ b/src/app/cliente/crear-cliente/crear-cliente.component.html
@@ -35,7 +35,7 @@
             <div class="form-floating">
                 <input type="number" [(ngModel)]="usuario.talla" placeholder="" class="form-control"
                     id="floatingEstatura">
-                <label for="floatingEstatura" class="color-label font-bold">Estatura</label>
+                <label for="floatingEstatura" class="color-label font-bold">Estatura (CM)</label>
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
         <div class="col-12">
             <div class="form-floating">
                 <input type="number" [(ngModel)]="peso" placeholder="" class="form-control" id="floatingPeso">
-                <label for="floatingPeso" class="color-label font-bold">Peso</label>
+                <label for="floatingPeso" class="color-label font-bold">Peso (KG)</label>
             </div>
         </div>
     </div>
