--- a/src/app/cliente/leer-cliente/leer-cliente.component.html
+++ b/src/app/cliente/leer-cliente/leer-cliente.component.html
@@ -48,7 +48,7 @@
                                     <div class="form-floating">
                                         <input type="text" [(ngModel)]="usuario.talla" placeholder="" [disabled]="true"
                                             class="form-control form-control-sm" id="floatingEstatura">
-                                        <label for="floatingEstatura" class="color-label font-bold">Estatura</label>
+                                        <label for="floatingEstatura" class="color-label font-bold">Estatura (CM)</label>
                                     </div>
                                 </li>
                                 <li class="list-group-item">
@@ -189,7 +189,7 @@
                 <div class="form-floating">
                     <input type="number" [(ngModel)]="pesoActualizar" placeholder=""
                         class="form-control form-control-sm" id="floatingPeso">
-                    <label for="floatingPeso" class="color-label font-bold">Nuevo Peso</label>
+                    <label for="floatingPeso" class="color-label font-bold">Nuevo Peso (KG)</label>
                 </div>
             </div>
         </div>
@@ -367,7 +367,7 @@
                 <div class="form-floating">
                     <input type="text" [(ngModel)]="usuarioActualizar.talla" placeholder=""
                         class="form-control form-control-sm" id="floatingTalla">
-                    <label for="floatingTalla" class="color-label font-bold">Talla</label>
+                    <label for="floatingTalla" class="color-label font-bold">Estatura (CM)</label>
                 </div>
             </div>
         </div>
