--- a/src/app/plan/crear-plantilla-plan/crear-plantilla-plan.component.html
+++ b/src/app/plan/crear-plantilla-plan/crear-plantilla-plan.component.html
@@ -226,7 +226,7 @@
                     <select [(ngModel)]="rutinaCrear.medidaPeso" id="floatingMedidaPeso" [compareWith]="compareFn"
                         class="form-select">
                         <option [value]="null"></option>
-                        <option *ngFor="let medidaPeso of medidasPesos" [ngValue]="medidaPeso">
+                        <option *ngFor="let medidaPeso of medidasPesos" [ngValue]="medidaPeso.valor">
                             {{medidaPeso.valor}}
                         </option>
                     </select>
@@ -252,7 +252,7 @@
                     <select [(ngModel)]="rutinaCrear.medidaTiempo" id="floatingMedidaTiempo" [compareWith]="compareFn"
                         class="form-select">
                         <option [value]="null"></option>
-                        <option *ngFor="let medidaTiempo of medidasTiempos" [ngValue]="medidaTiempo">
+                        <option *ngFor="let medidaTiempo of medidasTiempos" [ngValue]="medidaTiempo.valor">
                             {{medidaTiempo.valor}}
                         </option>
                     </select>
@@ -416,7 +416,7 @@
                 <br>
                 <ng-container *ngIf="plantillaPlan.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen!=null">
                     <img class="card-img-top"
-                        src="{{prefijoUrlEjercicios+plantillaPlan.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen}}"
+                        src="{{host+prefijoUrlEjercicios+plantillaPlan.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen}}"
                         height="300px" alt="Card image cap">
                 </ng-container>
                 <ng-container *ngIf="plantillaPlan.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen==null">
