Modificacion en nombre personalizado

--- a/src/app/cliente/crear-cliente/crear-cliente.component.html
+++ b/src/app/cliente/crear-cliente/crear-cliente.component.html
@@ -33,7 +33,7 @@
     <div class="row mb-3">
         <div class="col-12">
             <div class="form-floating">
-                <input type="number" [(ngModel)]="usuario.talla" placeholder="" class="form-control"
+                <input type="number" [(ngModel)]="usuario.estatura" placeholder="" class="form-control"
                     id="floatingEstatura">
                 <label for="floatingEstatura" class="color-label font-bold">Estatura (CM)</label>
             </div>
