--- a/src/app/plan/leer-medida/leer-medida.component.html
+++ b/src/app/plan/leer-medida/leer-medida.component.html
@@ -23,7 +23,7 @@
                         IDENTIFICACION: {{usuario.identificacion}}
                     </li>
                     <li class="list-group-item font-color d-flex justify-content-center">
-                        ESTATURA: {{usuario.talla}}
+                        ESTATURA: {{usuario.estatura}}
                     </li>
                     <li class="list-group-item font-color d-flex justify-content-center">
                         EDAD: {{usuario.edad}}
