--- a/src/app/cliente/leer-cliente/leer-cliente.component.html
+++ b/src/app/cliente/leer-cliente/leer-cliente.component.html
@@ -238,7 +238,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="form-floating">
-                    <input type="text" [(ngModel)]="observacionActualizar" placeholder=""
+                    <input type="text" [(ngModel)]="observacionActualizar" placeholder="" oninput="this.value = this.value.toUpperCase()"
                         class="form-control form-control-sm" id="floatingObservacion">
                     <label for="floatingObservacion" class="color-label font-bold">Nueva Observacion</label>
                 </div>
@@ -288,7 +288,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="form-floating">
-                    <input type="text" [(ngModel)]="objetivoActualizar" placeholder=""
+                    <input type="text" [(ngModel)]="objetivoActualizar" placeholder="" oninput="this.value = this.value.toUpperCase()"
                         class="form-control form-control-sm" id="floatingObservacion">
                     <label for="floatingObjetivo" class="color-label font-bold">Nuevo Objetivo</label>
                 </div>
