--- a/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/inicio-sesion/inicio-sesion.component.html
@@ -1,6 +1,6 @@
-<div class="container font-size" style="background-image: url({{prefijoUrlImagenes+fondoInicioSesion}}); width: 100%; height: 100%">
-    <div class="row">
-        <img src="{{prefijoUrlImagenes+logo}}" alt="...">
+<div class="container-fluid font-size" id="fondoInicioSesion" style="background-image: url({{prefijoUrlImagenes+fondoInicioSesion}}); width: 100%; height: 100%">
+    <div class="row" id="centrar">
+        <img src="{{prefijoUrlImagenes+logo}}" id="logo" alt="...">
     </div>
     <div class="row">
         <div class="col-12 mb-4">
