--- a/src/app/plan/leer-plantilla-plan/leer-plantilla-plan.component.html
+++ b/src/app/plan/leer-plantilla-plan/leer-plantilla-plan.component.html
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-flex justify-content-center">
             <button class="btn btn-ligth" (click)="menu()"><i class="bi bi-list" style="font-size: 1.5rem"></i></button>
         </nav>
     </div>
-    <div class="row">
-        <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
+    <div class="row" id="centrar">
+        <img src="{{prefijoUrlImagenes+logo}}" id="logo" class="esp-image" alt="...">
     </div>
     <div class="row">
         <div class="col-12" align="center">
