--- a/src/app/cliente/leer-cliente/leer-cliente.component.css
+++ b/src/app/cliente/leer-cliente/leer-cliente.component.css
@@ -34,3 +34,19 @@
 .separate{
     margin-right: 10px;
 }
+
+@media only screen and ( min-width: 992px ){
+  #fondoInicioSesion{
+        background-repeat: round;
+  }
+  #logo{
+      width: 30%;
+      height: auto;
+      margin-top: -5%;
+      margin-bottom: -5%;
+  }
+  #centrar{
+      display: flex;
+      justify-content: center;
+  }
+}
