--- a/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.css
+++ b/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.css
@@ -75,3 +75,19 @@
     margin-bottom: 5px;
   }
 }
+
+@media only screen and ( min-width: 992px ){
+  #fondoInicioSesion{
+        background-repeat: round;
+  }
+  #logo{
+      width: 30%;
+      height: auto;
+      margin-top: -5%;
+      margin-bottom: -5%;
+  }
+  #centrar{
+      display: flex;
+      justify-content: center;
+  }
+}
