--- a/src/app/menu-cliente/menu-cliente.component.html
+++ b/src/app/menu-cliente/menu-cliente.component.html
@@ -4,8 +4,8 @@
             <button class="btn btn-ligth" (click)="menu()"><i class="bi bi-list" style="font-size: 1.5rem"></i></button>
         </nav>
     </div>
-    <div class="row">
-        <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
+    <div class="row" id="centrar">
+        <img src="{{prefijoUrlImagenes+logo}}" id="logo" class="esp-image" alt="...">
     </div>
     <div class="row">
         <div class="col-12" align="center">
