--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -40,3 +40,19 @@
     margin-top: -20%;
     margin-bottom: -10%;
 }
+
+@media only screen and ( min-width: 992px ){
+  #fondoInicioSesion{
+        background-repeat: round;
+  }
+  #logo{
+      width: 30%;
+      height: auto;
+      margin-top: -5%;
+      margin-bottom: -5%;
+  }
+  #centrar{
+      display: flex;
+      justify-content: center;
+  }
+}
