--- a/src/app/plan/leer-plan/leer-plan.component.html
+++ b/src/app/plan/leer-plan/leer-plan.component.html
@@ -111,12 +111,12 @@
                     <label class="font-weight-bold">{{usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.nombrePersonalizado}}</label>
                 </ng-container>
                 
-                <ng-container *ngIf="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen!=null">
+                <ng-container *ngIf="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen!=''">
                     <img class="card-img-top"
                         src="{{host+prefijoUrlEjercicios+usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen}}"
                         height="300px" alt="Card image cap">
                 </ng-container>
-                <ng-container *ngIf="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen==null">
+                <ng-container *ngIf="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen==''">
                     <textarea rows="3" [disabled]="true"
                         [(ngModel)]="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.detalle"
                         oninput="this.value = this.value.toUpperCase()" class="form-control form-control-sm"></textarea>
