--- a/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.html
+++ b/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.html
@@ -16,7 +16,7 @@
         <div class="col-12">
             <div class="form-floating">
                 <input type="text" [(ngModel)]="ejercicio.nombre" placeholder="" class="form-control"
-                    oninput="this.value = this.value.toUpperCase()" id="floatingNombre">
+                    style="text-transform:uppercase" id="floatingNombre">
                 <label for="floatingNombre" class="color-label font-bold">Nombre</label>
             </div>
         </div>
@@ -25,7 +25,7 @@
         <div class="col-12">
             <div class="form-floating">
                 <input type="text" [(ngModel)]="ejercicio.nombrePersonalizado" placeholder="" class="form-control"
-                    oninput="this.value = this.value.toUpperCase()" id="floatingNombrePersonalizado">
+                    style="text-transform:uppercase" id="floatingNombrePersonalizado">
                 <label for="floatingNombrePersonalizado" class="color-label font-bold">Nombre Personalizado</label>
             </div>
         </div>
