--- a/src/app/plan/crear-plantilla-plan/crear-plantilla-plan.component.html
+++ b/src/app/plan/crear-plantilla-plan/crear-plantilla-plan.component.html
@@ -15,7 +15,7 @@
     <div class="row mb-3">
         <div class="col-12">
             <div class="form-floating">
-                <input type="text" [(ngModel)]="plantillaPlan.nombre" oninput="this.value = this.value.toUpperCase()"
+                <input type="text" [(ngModel)]="plantillaPlan.nombre" style="text-transform:uppercase"
                     placeholder="" class="form-control" id="floatingNombre" (change)="actualizarNombre()">
                 <label for="floatingNombre" class="color-label font-bold">Nombre Plantilla</label>
             </div>
@@ -25,7 +25,7 @@
         <div class="col-12">
             <div class="form-floating">
                 <input type="text" [(ngModel)]="plantillaPlan.somatotipo"
-                    oninput="this.value = this.value.toUpperCase()" placeholder="" class="form-control"
+                style="text-transform:uppercase" placeholder="" class="form-control"
                     id="floatingSomatotipo" (change)="actualizarSomatotipo()">
                 <label for="floatingSomatotipo" class="color-label font-bold">Somatotipo</label>
             </div>
@@ -192,7 +192,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaCrear.repeticiones" placeholder="" class="form-control"
-                            oninput="this.value = this.value.toUpperCase()" id="floatingRepeticiones">
+                        style="text-transform:uppercase" id="floatingRepeticiones">
                         <label for="floatingRepeticiones" class="color-label font-bold">Repeticiones</label>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaCrear.series" placeholder="" class="form-control"
-                            oninput="this.value = this.value.toUpperCase()" id="floatingSeries">
+                        style="text-transform:uppercase" id="floatingSeries">
                         <label for="floatingSeries" class="color-label font-bold">Series</label>
                     </div>
                 </div>
@@ -214,7 +214,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaCrear.valorPeso" placeholder="" class="form-control"
-                            oninput="this.value = this.value.toUpperCase()" id="floatingValorPeso">
+                        style="text-transform:uppercase" id="floatingValorPeso">
                         <label for="floatingValorPeso" class="color-label font-bold">Valor Peso</label>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaCrear.valorTiempo" placeholder="" class="form-control"
-                            oninput="this.value = this.value.toUpperCase()" id="floatingTiempo">
+                        style="text-transform:uppercase" id="floatingTiempo">
                         <label for="floatingTiempo" class="color-label font-bold">Tiempo</label>
                     </div>
                 </div>
@@ -321,7 +321,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaActualizar.repeticiones" placeholder=""
-                            class="form-control" oninput="this.value = this.value.toUpperCase()"
+                            class="form-control" style="text-transform:uppercase"
                             id="floatingRepeticiones">
                         <label for="floatingRepeticiones" class="color-label font-bold">Repeticiones</label>
                     </div>
@@ -333,7 +333,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaActualizar.series" placeholder="" class="form-control"
-                            oninput="this.value = this.value.toUpperCase()" id="floatingSeries">
+                        style="text-transform:uppercase" id="floatingSeries">
                         <label for="floatingSeries" class="color-label font-bold">Series</label>
                     </div>
                 </div>
@@ -344,7 +344,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaActualizar.valorPeso" placeholder=""
-                            class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingValorPeso">
+                            class="form-control" style="text-transform:uppercase" id="floatingValorPeso">
                         <label for="floatingValorPeso" class="color-label font-bold">Peso</label>
                     </div>
                 </div>
@@ -370,7 +370,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaActualizar.valorTiempo" placeholder=""
-                            class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingTiempo">
+                            class="form-control" style="text-transform:uppercase" id="floatingTiempo">
                         <label for="floatingTiempo" class="color-label font-bold">Tiempo</label>
                     </div>
                 </div>
@@ -421,7 +421,7 @@
                 <ng-container *ngIf="plantillaPlan.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen==null">
                     <textarea rows="3" [disabled]="true"
                         [(ngModel)]="plantillaPlan.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.detalle"
-                        oninput="this.value = this.value.toUpperCase()" class="form-control form-control-sm"></textarea>
+                        style="text-transform:uppercase" class="form-control form-control-sm"></textarea>
                 </ng-container>
             </div>
         </div>
